# build-tool

./: .gitignore  CMakeLists.txt  README.md  a.cpp  app  test.bf  todo.md
demo/: Buildfile.bf  app  main.cpp
src/: build_orchestrator.cpp  build_orchestrator.hpp  built_in_enums.cpp  built_in_enums.hpp  built_in_functions.cpp  built_in_functions.hpp  config.cpp  config.hpp  file_utils.cpp  file_utils.hpp  identifier_registry.cpp  identifier_registry.hpp  identifier_registry.hpp.cpp  lexer.cpp  lexer.hpp  main.cpp  old_parser.hpp  parser.cpp  parser.hpp  rule_graph.cpp  rule_graph.hpp  rule_runner.cpp  rule_runner.hpp  rules.cpp  rules.hpp  value.cpp  value.hpp  variable_evaluator.cpp  variable_evaluator.hpp  variable_registry.cpp  variable_registry.hpp
src/built_in/: enums.cpp  enums.hpp  func_registry.cpp  func_registry.hpp  funcs.cpp  funcs.hpp
src/dictionaries/: config.cpp  config.hpp  config_factory.cpp  config_factory.hpp  qualified_dicts.hpp  rule_factory.cpp  rule_factory.hpp  rules.cpp  rules.hpp
src/errors/: error.cpp  error.hpp
src/funcs/: built_in_funcs.hpp  func_registry.cpp  func_registry.hpp
src/io/: colors.hpp  file_utils.cpp  file_utils.hpp  fs_gateway.cpp  fs_gateway.hpp  proc_runner.cpp  proc_runner.hpp  proc_spawner.cpp  proc_spawner.hpp
src/parsing/: expr.cpp  expr.hpp  namespace_builder.cpp  namespace_builder.hpp  parser.cpp  parser.hpp
test_data/: Buildfile
tests/: test_errors.cpp  test_evaluator.cpp  test_graph.cpp  test_graph_extended.cpp  test_integration.cpp  test_integration_extended.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_rule_runner.cpp  test_rules.cpp  test_value_and_builtins.cpp  utils.cpp  utils.hpp
tests/data/: parsing_data.hpp  (+3 more)
(+14 files in other folders)
